Committing new images

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 html, body {
     height: 100%;
     width: 100%;
-    background-image: url(images/smug_kat.jpg), url(images/yume_nikki.jpg);
+    background-image: url(images/smug_kat.jpg), url(images/yume_nikki.png);
     background-position: center, center;
     background-position-y: 60%;
     background-size: 30%, 100%;
@@ -18,7 +18,7 @@ h1 {
     text-align: center;
     color: rgb(90, 44, 106, 0.88);
     font: italic small-caps 40px yumenikki;
-    width: 50vh;
+    width: vh;
     background-color: rgb(69, 7, 74, 0.65);
     background-blend-mode: soft-light;
 }
