--- a/style.css
+++ b/style.css
@@ -1,31 +1,118 @@
+
 @font-face {
     font-family: yumenikki;
     src: url(fonts/yume_nikki_font.ttf);
 }
 
-html, body {
-    height: 100%;
-    width: 100%;
-    background-image: url(images/smug_kat.jpg), url(images/yume_nikki.png);
-    background-position: center, center;
-    background-position-y: 60%;
-    background-size: 30%, 100%;
-    background-repeat: no-repeat, no-repeat;
-}   
-h1 {
-    margin: auto;
-    margin-top: 5%;
-    text-align: center;
-    color: rgb(90, 44, 106, 0.88);
-    font: italic small-caps 40px yumenikki;
-    width: vh;
-    background-color: rgb(69, 7, 74, 0.65);
-    background-blend-mode: soft-light;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-p1 {
-    width: 20vh;
-    margin-left: 2vh;
-    text-align: start;
+
+body{
+    min-height: 100vh;
+    min-height: 100dvh;
+    background-image: url('images/yume_nikki.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    font-family: 'yumenikki', sans-serif;
+}
+
+nav {
+    display: flex;
+    justify-content: flex-end;
+}
+
+nav a{
+    margin-top: 0.5%;
+    font: italic small-caps 40px yumenikki;
+    color: white;
+    text-align: center;
+    padding: 1em 2em;
+    text-decoration: none;
+    font-size: 25px;
+}
+
+nav a:hover{
+  background-color: rgba(112, 3, 255, 0.3);
+}
+
+nav a.active{
+   background-color: rgba(37, 2, 82, 0.927); 
+}
+
+#open_sidebar_button{
+    display: none;
+    background: none;
+    border: none;
+    padding: 1em;
+    margin-right: auto;
+    cursor: pointer;
+}
+
+#close_sidebar_button{
+    display: none;
+    background: none;
+    border: none;
+    padding: 1em;
+    cursor: pointer;
+    margin-left: auto;
+}
+
+#overlay{
+    background: rgba(0, 0, 0, 0.3);
+    position: fixed;
+    inset: 0;
+    z-index: 9;
+    display: none;
+}
+
+@media screen and (max-width: 850px) {
+    #open_sidebar_button, #close_sidebar_button{
+        display: block;
+    }
+    nav {
+        position: fixed;
+        top: 0;
+        left: -100%;
+        height: 100vh;
+        width: min(15em, 100%);
+        z-index: 10;
+        background-color: rgb(195, 4, 4);
+        box-shadow: 3px 3px 5px rgb(117, 53, 53, 0.9);
+        
+        display: flex;
+        flex-direction: column; 
+        justify-content: flex-start;
+
+        transition: left 300ms ease-out
+    }
+    nav.show{
+        left: 0;
+    }
+    nav.show ~ #overlay {
+        display: block;
+    }
+    nav a {
+        width: 100%; 
+        font: italic small-caps 40px yumenikki;
+        color: white;
+        text-align: center;
+        padding-right: 2.5em;
+        text-decoration: none;
+        font-size: 25px;
+    }
+}
+
+h1 {
+    color: rgba(90, 44, 106, 0.88);
+    font: italic small-caps 40px yumenikki;
+    clear: both;
+}
+p {
     font: italic small-caps 20px yumenikki;
-    background-color: rgb(112, 11, 163, 0.8);
+    background-color: rgba(112, 11, 163, 0.8);
 } 
+
