--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 @font-face {
-    font-family: yumenikki;
+    font-family: 'yumenikki';
     src: url(fonts/yume_nikki_font.ttf);
 }
 
@@ -13,54 +13,63 @@
 body{
     min-height: 100vh;
     min-height: 100dvh;
-    background-image: url('images/yume_nikki.png');
+    background-image: url('resources/backgrounds/yume_nikki.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    font-family: 'yumenikki', sans-serif;
+    font-family: 'yumenikki';
+    scrollbar-width: thin;
 }
 
-nav {
+#navbar{
+    position: sticky;
+}
+
+#navbar ul{
+    list-style-type: none;
     display: flex;
     justify-content: flex-end;
 }
-
-nav a{
-    margin-top: 0.5%;
-    font: italic small-caps 40px yumenikki;
+#navbar li{
+    display: flex;
+}
+#navbar a{
     color: white;
     text-align: center;
     padding: 1em 2em;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 2.5vh;
+    font-style: italic;
+    font-variant: small-caps;
+    transition: background-color 400ms ease;
 }
-
-nav a:hover{
+#navbar a:hover{
   background-color: rgba(112, 3, 255, 0.3);
 }
-
-nav a.active{
-   background-color: rgba(37, 2, 82, 0.927); 
+#navbar a.active{
+   background-color: rgba(37, 2, 82, 0.93); 
 }
+
 
 #open_sidebar_button{
     display: none;
     background: none;
     border: none;
-    padding: 1em;
+    padding: min(1em,8%);
     margin-right: auto;
     cursor: pointer;
+    background-color: rgba(211, 211, 211, 0.10);
+    clip-path: circle(35%);
+    
 }
-
 #close_sidebar_button{
     display: none;
     background: none;
     border: none;
-    padding: 1em;
-    cursor: pointer;
+    padding: min(1em,8%);
     margin-left: auto;
+    cursor: pointer;
 }
-
 #overlay{
     background: rgba(0, 0, 0, 0.3);
     position: fixed;
@@ -69,50 +78,75 @@ nav a.active{
     display: none;
 }
 
-@media screen and (max-width: 850px) {
-    #open_sidebar_button, #close_sidebar_button{
+@media screen and (max-width: 750px) {
+     #close_sidebar_button{
         display: block;
     }
-    nav {
+    #open_sidebar_button {
+        display: flex;               
+        justify-content: center;   
+        align-items: center;    
+        opacity: 60%;    
+    }
+    #open_sidebar_button:hover{
+        opacity: 100%;
+    }
+    #navbar button{
+        padding-bottom: 15vh;
+    }
+    #navbar.show{
+        left: 0;
+    }
+    #navbar.show ~ #overlay {
+        display: block;
+    }
+    #navbar {
+        scrollbar-width: thin;
+        overflow: auto;
         position: fixed;
         top: 0;
         left: -100%;
         height: 100vh;
         width: min(15em, 100%);
         z-index: 10;
-        background-color: rgb(195, 4, 4);
-        box-shadow: 3px 3px 5px rgb(117, 53, 53, 0.9);
+        background-color: rgba(14, 0, 0, 0.9);
+        backdrop-filter: blur(7px);
         
         display: flex;
-        flex-direction: column; 
+        flex-direction: column;
         justify-content: flex-start;
 
-        transition: left 300ms ease-out
+        transition: left 350ms ease-out
     }
-    nav.show{
-        left: 0;
+    #navbar ul{
+        width: 100%;
+        flex-direction: column;
     }
-    nav.show ~ #overlay {
-        display: block;
-    }
-    nav a {
+    #navbar a {
         width: 100%; 
-        font: italic small-caps 40px yumenikki;
         color: white;
         text-align: center;
         padding-right: 2.5em;
         text-decoration: none;
-        font-size: 25px;
+        font-size: 1.5rem;
+        transition: background-color 400ms ease;
     }
 }
 
 h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: yumenikki;
+    font-size: 3rem;
     color: rgba(90, 44, 106, 0.88);
-    font: italic small-caps 40px yumenikki;
-    clear: both;
+    font-style: italic small-caps;
+    font-variant: small-caps;
+    text-align: center;
 }
 p {
     font: italic small-caps 20px yumenikki;
+    color: aliceblue;
     background-color: rgba(112, 11, 163, 0.8);
 } 
 
