--- a/style.css
+++ b/style.css
@@ -4,9 +4,16 @@
     src: url(fonts/yume_nikki_font.ttf);
 }
 
+h1, h2, h3, h4, h5, h6,p{
+    color: white;
+}
+
 *{
     margin: 0;
     padding: 0;
+    position: relative;
+    scroll-behavior: smooth;
+    scroll-padding-top: 7vh;
     box-sizing: border-box;
 }
 
@@ -21,14 +28,29 @@ body{
     scrollbar-width: thin;
 }
 
-#navbar{
-    position: sticky;
+.page_content{
+    width: 100%;
+    max-width: 2600px; 
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 min(5vw, 20px);
 }
 
+
+#navbar{
+    z-index: 1000;
+    display: flex;
+    justify-content: flex-end;
+    position: sticky;
+    top: 0;
+    overflow: auto;
+    background-color: rgba(62, 3, 165, 0.3);
+    backdrop-filter: blur(5px);
+}
 #navbar ul{
     list-style-type: none;
     display: flex;
-    justify-content: flex-end;
+
 }
 #navbar li{
     display: flex;
@@ -38,7 +60,7 @@ body{
     text-align: center;
     padding: 1em 2em;
     text-decoration: none;
-    font-size: 2.5vh;
+    font-size: 1.5rem;
     font-style: italic;
     font-variant: small-caps;
     transition: background-color 400ms ease;
@@ -46,12 +68,8 @@ body{
 #navbar a:hover{
   background-color: rgba(112, 3, 255, 0.3);
 }
-#navbar a.active{
-   background-color: rgba(37, 2, 82, 0.93); 
-}
-
-
 #open_sidebar_button{
+    z-index: 8;
     display: none;
     background: none;
     border: none;
@@ -60,7 +78,6 @@ body{
     cursor: pointer;
     background-color: rgba(211, 211, 211, 0.10);
     clip-path: circle(35%);
-    
 }
 #close_sidebar_button{
     display: none;
@@ -77,16 +94,14 @@ body{
     z-index: 9;
     display: none;
 }
-
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 800px) {
      #close_sidebar_button{
         display: block;
     }
     #open_sidebar_button {
-        display: flex;               
-        justify-content: center;   
-        align-items: center;    
-        opacity: 60%;    
+        position: fixed;
+        display: flex;                  
+        opacity: 60%;   
     }
     #open_sidebar_button:hover{
         opacity: 100%;
@@ -96,6 +111,9 @@ body{
     }
     #navbar.show{
         left: 0;
+    }
+    #navbar.show ~ #open_sidebar_button {
+    display: none;
     }
     #navbar.show ~ #overlay {
         display: block;
@@ -111,7 +129,6 @@ body{
         z-index: 10;
         background-color: rgba(14, 0, 0, 0.9);
         backdrop-filter: blur(7px);
-        
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -133,20 +150,119 @@ body{
     }
 }
 
+#home{
+    display: flex;
+}
+
+#home img{
+    height: 50dvh;
+    width: 100%;
+    image: url('resources/backgrounds/polygon_landscape.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+#lancer_button{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 200px;
+    height: 100px;
+    clip-path: circle(30%);
+}
+
+.projects_container{
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 3000px;
+    padding: min(5vh,10%);
+}
+.projects_container h3{
+    text-align: center;
+}
+#projects_box{
+    display: grid;
+    grid-template-columns: repeat(1, minmax(200px,1fr));
+    gap: 10px;
+    background-color: red;  
+    overflow: hidden;
+    align-content: center;
+    justify-content: center;
+}
+@media (min-width: 800px) {
+    #projects_box {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+#projects_box>div{
+    text-align: center;
+    padding: clamp(0.5em, 2vw, 1.5em);
+    border: 3px solid pink; 
+}
+.projects_container p{
+    text-align: left;
+}
+.projects_container img{
+    max-width: 100%;
+    height: clamp(200px, 20vw, 600px);
+    object-fit: cover;
+}
+
+.contact_bar {
+    display: flex; 
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: rgba(94, 1, 187, 0.33);
+    backdrop-filter: blur(10px);
+    gap: 10px;
+    padding: 1em;
+    text-align: center;
+    margin-bottom: 10vh;
+}
+.contact_bar div {
+    flex: 1 1 250px;
+    max-width: 800px;
+    padding: 1em;
+    background-color: red;
+    border: 2px solid pink;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+@media screen and (max-width: 800px) {
+    .contact_bar {
+        flex-direction: column;
+        align-items: stretch;
+    }
+    .contact_bar div {
+        max-width: 100%;
+        max-height: 150px;
+        width: 100%;
+    }
+}
+
 h1 {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     font-family: yumenikki;
-    font-size: 3rem;
+    font-size: clamp(3rem, 2.73rem + 1.09vw, 3.6rem);
     color: rgba(90, 44, 106, 0.88);
-    font-style: italic small-caps;
     font-variant: small-caps;
     text-align: center;
 }
+h2{
+	font-size: clamp(2.25rem, 2.05rem + 0.82vw, 2.7rem);}
+h3{
+    font-size: clamp(1.25rem, 1.14rem + 0.46vw, 1.5rem)
+}
+h4{
+    font-size: clamp(1.5rem, 1.36rem + 0.55vw, 1.8rem);
+}
 p {
-    font: italic small-caps 20px yumenikki;
-    color: aliceblue;
-    background-color: rgba(112, 11, 163, 0.8);
+    font-size: clamp(0.83rem, 0.76rem + 0.33vw, 1rem);
 } 
 
